--- a/contracts/ibc-denom-resolver-base/Cargo.toml
+++ b/contracts/ibc-denom-resolver-base/Cargo.toml
@@ -14,6 +14,7 @@ cosmwasm-std = { version = "1.2.5", features = ["stargate"] }
 cw-storage-plus = { version = "1.1.0" }
 schemars = "0.8.10"
 serde = { version = "1.0.144", default-features = false, features = ["derive"] }
+serde_json = "1.0"
 thiserror = { version = "1.0.23" }
 protobuf = { version = "3.2.0", features = ["with-bytes"] }
 prost = "0.11"
