--- a/packages/ibc-denom-resolver/Cargo.toml
+++ b/packages/ibc-denom-resolver/Cargo.toml
@@ -14,5 +14,6 @@ cw20 = { version = "1.1.0" }
 cosmwasm-std = { version = "1.0.0"}
 schemars = "0.8.10"
 serde = { version = "1.0.144", default-features = false, features = ["derive"] }
+serde_json = "1.0"
 protobuf = { version = "3.2.0", features = ["with-bytes"] }
 thiserror = { version = "1.0.23" }
