--- a/contracts/ibc-denom-resolver/Cargo.toml
+++ b/contracts/ibc-denom-resolver/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "packet-forward"
+name = "ibc-denom-resolver"
 version = "0.1.0"
 edition = "2021"
 
@@ -13,4 +13,6 @@ serde = "1.0.160"
 serde-json-wasm = "0.5.1"
 thiserror = "1.0.23"
 cw-utils = "1.0.1"
-cw-storage-plus =  "1.1.0"
+cw-storage-plus = "1.1.0"
+bech32 = "0.9.0"
+packet-forward = { path = "../packet-forward" }
