--- a/contracts/ibc-denom-resolver/Cargo.toml
+++ b/contracts/ibc-denom-resolver/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 cosmwasm-schema = "1.3.1"
-cosmwasm-std = { version = "1.3.1", features = ["ibc3"] }
+cosmwasm-std = { version = "1.3.1", features = ["stargate"] }
 schemars = "0.8.12"
 serde = "1.0.160"
 serde-json-wasm = "0.5.1"
@@ -16,3 +16,4 @@ cw-utils = "1.0.1"
 cw-storage-plus = "1.1.0"
 bech32 = "0.9.0"
 packet-forward = { path = "../packet-forward" }
+prost = "0.11"
