--- a/contracts/packet-forward/Cargo.toml
+++ b/contracts/packet-forward/Cargo.toml
@@ -7,10 +7,12 @@ edition = "2021"
 
 [dependencies]
 cosmwasm-schema = "1.3.1"
-cosmwasm-std = { version = "1.3.1", features = ["ibc3"] }
+cosmwasm-std = { version = "1.3.1", features = ["stargate"] }
 schemars = "0.8.12"
 serde = "1.0.160"
 serde-json-wasm = "0.5.1"
 thiserror = "1.0.23"
 cw-utils = "1.0.1"
 cw-storage-plus =  "1.1.0"
+prost = "0.11"
+prost-types = "0.11"
