--- a/contracts/ibc-denom-resolver/Cargo.toml
+++ b/contracts/ibc-denom-resolver/Cargo.toml
@@ -3,7 +3,14 @@ name = "ibc-denom-resolver"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+crate-type = ["cdylib", "rlib"]
+
+[features]
+# use library feature to disable all instantiate/execute/query exports
+library = []
+# for more explicit tests, cargo test --features=backtraces
+backtraces = ["cosmwasm-std/backtraces"]
 
 [dependencies]
 cosmwasm-std = { version = "1.3.1", features = ["stargate"] }
@@ -11,5 +18,5 @@ cosmwasm-schema = "1.3.1"
 thiserror = "1.0"
 cw-storage-plus = "1.1.0"
 cw-utils = "1.0.1"
-serde-json-wasm = "0.5.1"
+serde-json-wasm = "1.0.0"
 packet-forward = { path = "../packet-forward" }
