--- a/contracts/packet-forward/Cargo.toml
+++ b/contracts/packet-forward/Cargo.toml
@@ -3,7 +3,14 @@ name = "packet-forward"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+crate-type = ["cdylib", "rlib"]
+
+[features]
+# use library feature to disable all instantiate/execute/query exports
+library = []
+# for more explicit tests, cargo test --features=backtraces
+backtraces = ["cosmwasm-std/backtraces"]
 
 [dependencies]
 cosmwasm-std = { version = "1.3.1", features = ["stargate"] }
@@ -11,7 +18,7 @@ cosmwasm-schema = "1.3.1"
 thiserror = "1.0"
 cw-storage-plus =  "1.1.0"
 cw-utils = "1.0.1"
-serde-json-wasm = "0.5.1"
+serde-json-wasm = "1.0.0"
 serde-cw-value = "0.7.0"
 prost = "0.11"
 prost-types = "0.11"
